<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newFieldDialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_field_name"
            android:text="@string/field_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <EditText
        android:id="@+id/text_field_name"
        android:layout_width="268dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_item_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_contract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract_type"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/contract_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_label_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/label_field_type"
            android:text="@string/field_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/form_label_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/text_field_type"
        android:layout_width="268dp"
        android:inputType="text"
        android:entries="@array/fieldType"
        android:imeOptions="actionDone"
        android:layout_height="@dimen/form_field_height"
        android:layout_marginBottom="@dimen/form_item_margin"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/form_label_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/field_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/form_label_text_size"
                android:paddingRight="2dp"/>

            <TextView
                android:id="@+id/label_field_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/form_label_text_size"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"/>

            <TextView
                android:text="@string/size_units"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/form_label_text_size"
                android:paddingLeft="2dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_field_dialog_finish_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveNewField"
        android:text="@string/button_finished"
        android:layout_gravity="end"/>

</LinearLayout>