<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

...
            android:visibility="gone"/>


    </LinearLayout>

    <Button
        android:id="@+id/add_damage_dialog_finish_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finished"
        android:onClick="saveNewDamage"
        android:layout_gravity="end"/>
...
